--- a/monotonic/siads.tex
+++ b/monotonic/siads.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article} \usepackage{amsmath,amsfonts}
-\usepackage{showlabels}
+%\usepackage{showlabels}
 \usepackage[pdftex]{graphicx,color}
 
 \newcommand{\htop}{{h_{\text{top}}}}
@@ -36,6 +36,8 @@
 \label{sec:do}
 
 \begin{itemize}
+\item Understand difference between analytic eigenfunctions and
+  numerical approximations
 \item Figure~\ref{fig:paths}: Plot of
   $\tilde T_{t=\frac{1}{4},g_0=\frac{1}{2},n}$ for several values of
   $n$.
@@ -63,7 +65,7 @@
 
 I seek a \emph{uniform} distribution on a \emph{restricted} set of
 functions.  Figure~\ref{fig:bounds} illustrate the set which I define
-by the following constraints\footnote{This an undecidable set.}:
+by the following constraints:
 \begin{subequations}
   \label{eq:f_def}
   \begin{description}
@@ -155,44 +157,64 @@ In the following, since I am only interested in the largest
 eigenvalue and the corresponding eigenfunctions\footnote{Called
   the Peron Frobenius eigenvalue and eigenvectors}, I either don't use
 subscripts or use them to denote $\tau=s\Delta t$ the only
-parameter.  The following manipulations produce a procedure for
-constructing eigenfunctions:
+parameter.
+
+Starting from this definition of an eigenfunction
+\begin{equation}
+  \label{eq:1}
+  \lambda_\tau \leftfunction_\tau(g) = \left( \leftfunction_\tau
+    \Aop_\tau \right) (g) = \int_0^1 \leftfunction_\tau(h)
+  \Aindicate_\tau(h,g) dh,  
+\end{equation}
+I derive a procedure for constructing eigenfunctions.  Note that
+$\Aindicate_\tau(h,g) = 1$ for all $h$ if $g \leq \tau$.
+Consequently, the integral in \eqref{eq:1} has the same value for any
+$g$ less than $\tau$, ie,
+\begin{equation*}
+  \int_0^1 \leftfunction_\tau(h) dh \equiv a ~\forall g: g \leq \tau.
+\end{equation*}
+I can choose to scale the eigenfunction so that $a=\lambda_\tau$ and
+\begin{equation*}
+  \leftfunction_\tau  (g) = 1 ~\forall g: g \leq \tau.
+\end{equation*}
+For larger values of $g$ the integrand in \eqref{eq:1} is one for
+$g-\tau \leq h < 1$ and
 \begin{align*}
-  \lambda_\tau \leftfunction_\tau(g) &= \int_0^1 \leftfunction_\tau(h)
-                             \Aindicate_\tau(h,g) dh \\
-  \lambda_\tau \leftfunction_\tau(g) &= \int_0^1 \leftfunction_\tau(h)
-                             dh ~~\forall g
-                             \leq \tau \\
-  &= \text{ some constant } \\
-  \leftfunction_\tau(g) &= a ~~\forall g \leq \tau \\
-  \lambda_\tau \leftfunction_\tau(g) &= \int_{g-\tau}^1 \leftfunction_\tau(h) dh ~~\forall
-  g > \tau\\
-  \lambda_\tau \frac{\partial}{\partial g} \leftfunction_\tau(g) &=
-            - \leftfunction_\tau(g-\tau)~~\forall g > \tau \\
-  \lambda_\tau \leftfunction_\tau(g) &= a - \int_0^{g-\tau} \leftfunction_\tau(h) dh ~~\forall
-  g > \tau\\
+  \lambda_\tau \leftfunction_\tau(g) &= \int_{g-\tau}^1
+      \leftfunction_\tau(h) dh ~~\forall g > \tau\\
+  &= \int_0^1 \leftfunction_\tau(h) dh - \int_0^{g-\tau}
+    \leftfunction_\tau(h) dh \\
+  &= \lambda_\tau - \int_0^{g-\tau} \leftfunction_\tau(h) dh \\
+  \frac{\partial}{\partial g} \leftfunction_\tau(g) &=
+            \frac{-1}{\lambda_\tau} \leftfunction_\tau(g-\tau)
+             ~~\forall g > \tau .  
 \end{align*}
+Note that for $\tau = 0$, I get the following pair of equations that
+has no solutions:
+\begin{align}
+  \frac{\partial}{\partial g} \leftfunction_0(g) &=
+       \frac{-1}{\lambda_0} \leftfunction_0(g) \\
+  \lambda_0 &= \int_0^1 \leftfunction_0(h) dh.
+\end{align}
 
 If $\tau = 1$ then the image of every function $\function$ is a
 multiple of the constant function $\leftfunction_\tau(g) = 1$ and the
-eigenvalue is $1$.  Also there is a one-dimensional subspace
-corresponding to $\lambda_\tau=1$ and an infinite dimensional subspace
-corresponding to $\lambda=0$.  If $\tau = \frac{1}{2}$, then
+eigenvalue is $1$.  If $\tau = \frac{1}{2}$, then
 \begin{equation*}
   \leftfunction_\tau(g) =
   \begin{cases}
-    a & g \leq \frac{1}{2} \\
-    a(\frac{3}{2} -g) & g > \frac{1}{2}
+    1 & g \leq \frac{1}{2} \\
+    1 + \frac{1}{\lambda}\left( \frac{1}{2} - g \right) & g > \frac{1}{2}
   \end{cases},
 \end{equation*}
 and
 \begin{align*}
-  \lambda_\tau \leftfunction_\tau (g) &= \left( \leftfunction_\tau \Aop_\tau \right) (g) \\
-  \lambda_\tau a &= a \left( \frac{1}{2} + \int_{\frac{1}{2}}^1
-              \left( \frac{3}{2} - h \right) dh \right) \\
-  &= a \left( \frac{5}{4} - \left[ \frac{h^2}{2}
-    \right]_{\frac{1}{2}}^1 \right)\\
-  \lambda_\tau &= \frac{7}{8}.
+  \lambda_\tau \leftfunction_\tau (g=0) &= \left( \leftfunction_\tau
+                                          \Aop_\tau \right) (g=0) \\ 
+  \lambda_\tau &= \left( \frac{1}{2} + \int_{\frac{1}{2}}^1
+                1 + \frac{1}{\lambda}\left( \frac{1}{2} - h \right)
+                dh \right) \\
+              &= \frac{1}{2} + \frac{1}{\sqrt{8}}.
 \end{align*}
 
 If $\tau = \frac{1}{n}$, then $\leftfunction_\tau$ is piecewise
@@ -203,7 +225,8 @@ $k\th$ segment and $g_k$ denote the end of that segment, the following
 iteration scheme defines $\leftfunction$ over the whole interval:
 \begin{align*}
   \leftfunction(g) &= p_0(g) \equiv 1 &\forall g:~ 0\leq g < g_0 \\
-  \leftfunction(g) &= p_{k+1}(g) \equiv p_k(g_k) - \int_{g_k}^g p_k(h) dh
+  \leftfunction(g) &= p_{k+1}(g) \equiv p_k(g_k) - \frac{1}{\lambda}
+                      \int_{g_k}^g p_k(h) dh
                                  &\forall g:~ g_k \leq g < g_{k+1}.
 \end{align*}
 Note that
@@ -211,19 +234,18 @@ Note that
   \label{eq:limit_function}
   \begin{align}
     \leftfunction_0(g) &\equiv \lim_{n \rightarrow \infty}
-    \leftfunction_{\frac{1}{n}}(g) = e^{\frac{1}{2}-g} \\
-    \rightfunction_0(g) &= e^{g-\frac{1}{2}},
+    \leftfunction_{\frac{1}{n}}(g) = who knows \\
+    \rightfunction_0(g) &= who knows,
   \end{align}
 \end{subequations}
 and
 \begin{equation}
   \label{eq:limit_value}
-  \lambda_0 =  e^{-\frac{1}{2}} \int_0^1\leftfunction_0(h) dh = 1 -
-  \frac{1}{e}.
+  \lambda_0 =  FixMe
 \end{equation}
 Figures~\ref{fig:eigenfunctions} and~\ref{fig:eigenvalues} illustrate
 $\leftfunction_{\frac{1}{n}}$ and $\lambda_{\frac{1}{n}}$ respectively
-for a few values of $n$,
+for a few values of $n$.\marginpar{FixMe}
 
 \begin{figure*}
   \centering
@@ -335,7 +357,7 @@ that remains is to show that the limit in \eqref{eq:paths} exists.
                 {\lambda_{\frac{t}{n}}} \right)^n  \nonumber
 \end{align}
 
-For large $t$ the limit in \eqref{eq:paths} approachs a power method for
+For large $t$ the limit in \eqref{eq:paths} approaches a power method for
 finding $\leftfunction$, and
 \begin{equation*}
   \lim_{t \rightarrow \infty} T_{t,g_0} \propto \leftfunction.
