Begin correcting spectral errors

--- a/monotonic/siads.tex
+++ b/monotonic/siads.tex
@@ -250,7 +250,7 @@ for a few values of $n$.\marginpar{FixMe}
 \begin{figure*}
   \centering
   \resizebox{0.75\textwidth}{!}{\includegraphics{eigenfunctions.pdf}}
-  \caption{Eigenfunctions of $\Aop_\tau$ with $\tau=\frac{1}{n}$ for
+  \caption{Eigenfunctions FixMe bogus of $\Aop_\tau$ with $\tau=\frac{1}{n}$ for
     several values of $n$.}
   \label{fig:eigenfunctions}
 \end{figure*}
@@ -259,8 +259,8 @@ for a few values of $n$.\marginpar{FixMe}
   \centering
   %\framebox[0.75\textwidth]{Plot here}
   \resizebox{0.75\textwidth}{!}{\includegraphics{eigenvalues.pdf}}
-  \caption{A plot that illustrates the convergence of $\lambda_{\tau}$
-    to $1-1/e\approx.6321$ as $\tau \rightarrow 0$.}
+  \caption{A plot that illustrates dependence of $\lambda_{\tau}$ on
+    $\tau$.}
   \label{fig:eigenvalues}
 \end{figure*}
 
